<resources>
    <string name="app_name">Anime_list</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="details">Details</string>
    <string name="favourite">favourite</string>
    <string name="action_animelist">Anime list</string>
    <string name="action_favourite">Favourites</string>
    <string name="title">Title</string>
    <string name="original_title">Original_title:</string>
    <string name="director">Director:</string>
    <string name="producer">Producer:</string>
    <string name="release_date">Release_date:</string>
    <string name="score">Score:</string>
    <string name="anime_description">Description:</string>
    <string name="view_favourites">Favourites</string>

</resources>